--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,16 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= tag :meta, name: "viewport", content: "width=device-width, initial-scale=1.0" %>
 </head>
 <body>
 
 <%= render 'layouts/header' %>
 
+<div class="container">
 <%= yield %>
-
 <%= render 'layouts/footer' %>
+</div>
 
 </body>
 </html>
