--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,2 +1,11 @@
-<%= link_to 'Home', root_path %>
-<%= link_to 'About', about_path %>
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+  <div class="container">
+    <a class="brand" href="#">Title</a>
+    <ul class="nav">
+      <li><%= link_to 'Home', root_path %></li>
+      <li><%= link_to 'About', about_path %></li>
+    </ul>
+  </div>
+  </div>
+</div>
